--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "autoload": {
         "psr-0": {
-        	"": "entity/"
+        	"": "entities/"
+        	"": "proxies/"
     	}
     }
 }
