--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "mpdf/mpdf": "dev-master"
     },
     "autoload": {
-        "psr-0": { "": "entities/"
+        "psr-0": { 
+        	"": "entities/",
         	"": "proxies/"
     	}
     }
